# cgr-tc5

./: meson.build  run.sh
files/: cube.blend  cube.blend1  cube.mdp  cube.mtl  livro.mtl  trabalho cgr.blend
include/: App.hpp  Camera.hpp  Color.hpp  Coordinate2D.hpp  Coordinate3D.hpp  Helpers.hpp  Object.hpp  Shapes.hpp  Utils.hpp
src/: App.cpp  Camera.cpp  Color.cpp  Coordinate2D.cpp  Coordinate3D.cpp  Helpers.cpp  Object.cpp  Shapes.cpp  Utils.cpp  main.cpp
